packages/dart_edge_auth/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_auth/dart_edge_auth.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dart_edge_core/ffi.dart' as imp$1;

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>()
external int dart_edge_auth_create(ffi.Pointer<ffi.Char> config_json);

@ffi.Native<
  ffi.Int64 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int64,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Int64 handle,
          ffi.Pointer<ffi.Char> statement_json,
        )
      >
    >,
    ffi.Pointer<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>,
    ffi.Pointer<
      ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> value)>
    >,
  )
>()
external int dart_edge_auth_create_with_shared_database(
  ffi.Pointer<ffi.Char> config_json,
  int dialect,
  int database_handle,
  ffi.Pointer<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Int64 handle,
        ffi.Pointer<ffi.Char> statement_json,
      )
    >
  >
  execute_pool,
  ffi.Pointer<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>
  take_last_error,
  ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> value)>
  >
  free_string,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_auth_dispose(int handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeHttpResponse>)>(isLeaf: true)
external void dart_edge_auth_free_response(
  ffi.Pointer<NativeHttpResponse> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_auth_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<
  ffi.Pointer<NativeHttpResponse> Function(
    ffi.Int64,
    ffi.Pointer<NativeHttpRequest>,
  )
>()
external ffi.Pointer<NativeHttpResponse> dart_edge_auth_handle_request(
  int handle,
  ffi.Pointer<NativeHttpRequest> request,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64)>()
external ffi.Pointer<ffi.Char> dart_edge_auth_list_routes(int handle);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_auth_native_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_auth_take_last_error();

@ffi.Native<
  ffi.Pointer<NativeHttpResponse> Function(
    ffi.Int64,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<imp$1.NativePair>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external ffi.Pointer<NativeHttpResponse> dart_edge_auth_trusted_admin_call(
  int handle,
  ffi.Pointer<ffi.Char> operation,
  int query_count,
  ffi.Pointer<imp$1.NativePair> query,
  ffi.Pointer<ffi.Uint8> body_ptr,
  int body_len,
);

final class NativeHttpRequest extends ffi.Struct {
  @ffi.Int32()
  external int method;

  external ffi.Pointer<ffi.Char> path;

  @ffi.IntPtr()
  external int query_count;

  external ffi.Pointer<imp$1.NativePair> query;

  @ffi.IntPtr()
  external int header_count;

  external ffi.Pointer<imp$1.NativePair> headers;

  external imp$1.NativeBytes body;
}

final class NativeHttpResponse extends ffi.Struct {
  @ffi.Uint16()
  external int status;

  external imp$1.NativeBytes content_type;

  @ffi.IntPtr()
  external int header_count;

  external ffi.Pointer<imp$1.NativePair> headers;

  external imp$1.NativeBytes body;
}
